# pkg/response/model.go
@@ -1,13 +1,17 @@
 package response
 
-import "strings"
+import (
+	"strconv"
+	"strings"
+)
 
 type Response struct {
-	// 数据集
-	RequestId string `protobuf:"bytes,1,opt,name=requestId,proto3" json:"requestId,omitempty"`
-	Code      int32  `protobuf:"varint,2,opt,name=code,proto3" json:"code,omitempty"`
-	Msg       string `protobuf:"bytes,3,opt,name=msg,proto3" json:"msg,omitempty"`
-	Status    string `protobuf:"bytes,4,opt,name=status,proto3" json:"status,omitempty"`
+	Success      bool   `json:"success,omitempty"`
+	ErrorCode    string `json:"errorCode,omitempty"`
+	ErrorMessage string `json:"errorMessage,omitempty"`
+	ShowType     uint8  `json:"showType,omitempty"`
+	TraceId      string `json:"traceId,omitempty"`
+	Host         string `json:"host,omitempty"`
 }
 
 type response struct {
@@ -35,19 +39,17 @@ func (e response) Clone() Responses {
 }
 
 func (e *response) SetTraceID(id string) {
-	e.RequestId = id
+	e.TraceId = id
 }
 
 func (e *response) SetMsg(s ...string) {
-	e.Msg += strings.Join(s, ",")
+	e.ErrorMessage += strings.Join(s, ",")
 }
 
 func (e *response) SetCode(code int32) {
-	e.Code = code
+	e.ErrorCode = strconv.Itoa(int(code))
 }
 
 func (e *response) SetSuccess(success bool) {
-	if !success {
-		e.Status = "error"
-	}
+	e.Success = success
 }
